z-index fix

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -526,6 +526,7 @@ b, strong {
 	padding-top: 40px;
 	padding-bottom: 40px;
 	background: #fff5ee;
+	position: relative;
 	.main-menu ul>li>a {
 		padding-left: 20px;
 		padding-right: 20px;
